--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Chat app using React, Firebase, MongoDB, Express and Socket.io"
     />
-    <meta name="keyword" content="chat app, mern stack, socket.io, firebase">
+    <meta name="author" content="Ritesh Kumar">
+    <meta name="keyword" content="chat app, mern stack, socket.io, firebase, real time">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -29,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Let's Chat</title>
+    <title>Bubble-Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
